<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bottom_selected_text_color">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:paddingStart="16dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/day"
        android:textColor="@color/white"
        android:textSize="16sp" />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:paddingStart="16dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/on_off"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/from"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/to"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>