<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_250sdp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#42A5F5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_3sdp"
            android:padding="@dimen/_3sdp"
            android:text="@string/appointmenttitle"
            android:textColor="@color/white"
            android:textSize="@dimen/_6sdp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_weight="6">

        <EditText
            android:id="@+id/editTextNotes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/notes_drawable"
            android:gravity="top|start"
            android:hint="@string/writenote"
            android:importantForAutofill="no"
            android:lines="10"
            android:padding="@dimen/_8sdp"
            tools:ignore="TextFields" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_3sdp">

        <Button
            android:id="@+id/cancelNoteButton"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="#EF5350"
            android:text="@string/cancel"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/updateNoteButton"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_10sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="#66BB6A"
            android:text="@string/update"
            android:textColor="@color/white" />
    </RelativeLayout>
</LinearLayout>