<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_22sdp"
        android:background="@drawable/header_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/addEvent"
            android:textColor="@color/white"
            android:textSize="@dimen/_8sdp" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/ic_close_white" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/addEventname"
        android:textColor="@color/black"
        android:textSize="@dimen/_8sdp" />

    <EditText
        android:id="@+id/ETeventname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/rounded_corner_grey_bg"
        android:gravity="start"
        android:hint="@string/addEventname"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:padding="@dimen/_4sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_8sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/addEventnotes"
        android:textColor="@color/black"
        android:textSize="@dimen/_8sdp" />

    <EditText
        android:id="@+id/ETeventsnotes"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/rounded_corner_grey_bg"
        android:gravity="start"
        android:hint="@string/entereventsnote"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:padding="@dimen/_4sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_8sdp"
        android:importantForAutofill="no" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/very_light_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/rounded_corner_grey_bg"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_6sdp" />

        <Button
            android:id="@+id/BTsubmintevents"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/btn_sky_blue"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:text="@string/addEvent"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_6sdp" />

    </LinearLayout>

</LinearLayout>